# CPU_usage_tracker

./: CMakeLists.txt  toolchain.cmake  valgrind-out.txt  valgrind.out.txt
lib/analyzer/: CMakeLists.txt  analyzer.c  analyzer.h  test_analyzer.c
lib/buffer/: CMakeLists.txt  buffer  buffer.c  buffer.h  test_buffer  test_buffer.c  test_buffer.h
lib/logger/: CMakeLists.txt  logger.c  logger.h
lib/printer/: CMakeLists.txt  printer.c  printer.h
lib/reader/: CMakeLists.txt  reader.c  reader.h  test_reader  test_reader.c  test_text  test_text.txt
lib/watchdog/: CMakeLists.txt  watchdog.c  watchdog.h
src/: main.c  main.h  main_p.c  main_p.h  structures.h
